# moabb-grace-contribution

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  PLAIN_parallelization.md  README.md  pyproject.toml  reproduce_issue.py
.claude/: settings.local.json
.github/scripts/: export_ga4_pageviews.py
.github/workflows/: docs.yml  link-check.yml  test-braindecode.yml  test.yml
.ralph/: AGENT.md
docs/: .buildinfo  CNAME  Makefile  README.html  api.html  cite.html  dataset_summary.html  genindex.html  index.html  objects.inv  paper_results.html  prepare_paper_results_tables.py  prepare_summary_tables.py  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  sitemap.xml  whats_new.html
docs/_downloads/02fd39d2e001d4ce624b0e2849f84bd2/: plot_fixed_interval_windows.py
docs/_downloads/05ebcf8b1004fdb44972d27b3107f883/: plot_fixed_interval_windows.ipynb
docs/_downloads/07fed29610643225fabdbe82529db825/: plot_riemannian_artifact_rejection.py
docs/_downloads/0a367d0d416f57bcfdbaa5c5ad921555/: riemannian_artifact_rejection.py
docs/_downloads/0b1ec83b0a2aca7fc81aefb4043b4efe/: tutorial_5_combining_datasets.py
docs/_downloads/1101b02d080accb4a6b497f4ce4f4873/: plot_changing_download_directory.ipynb
docs/_downloads/128a0dc85535daed73c860806fa62c91/: noplot_learning_curve_p300_external.ipynb
docs/_downloads/1c7d0b138bb905c4ef3742123909d332/: plot_sliding_estimator.ipynb
docs/_downloads/1d572f55de1f1c75feff109ca6a55fab/: tutorial_5_combining_datasets.ipynb
docs/_downloads/2a375418f1847c7396902d9ef1786ca1/: noplot_load_model.ipynb
docs/_downloads/337d0bb0f3327b553a011f5603258154/: tutorial_4_adding_a_dataset.py
docs/_downloads/33bee7d7204a7cb56293bd1d838b63f8/: plot_statistical_analysis.ipynb
docs/_downloads/3492da53de2fcbbc267c5e45e1d04fb9/: plot_learning_curve_p300.ipynb
docs/_downloads/3bb6d35e266c94de44c44ec75aa9d550/: plot_mne_and_scikit_estimators.py
docs/_downloads/4694294e5d6c692f56aeb9bdbc7e1baf/: plot_within_session_p300.ipynb
docs/_downloads/46d014244b321e934a890e079a5f0042/: tutorial_4_adding_a_dataset.ipynb
docs/_downloads/470a1c76b80dfd308183a73c81cb67cc/: noplot_mne_features_pipeline.ipynb
docs/_downloads/49d583283b8c86024dcc6b37dbba422f/: plot_vr_pc_p300_different_epoch_size.ipynb
docs/_static/: documentation_options.js  macro_table.html
docs/_static/analytics/: pageviews.json
docs/auto_examples/: index.html  plot_pseudoonline.html  sg_execution_times.html
docs/install/: install.html  install_pip.html  install_source.html
docs/source/: README.md  api.rst  cite.rst  conf.py  dataset_summary.rst  index.rst  llms-full.txt  llms.txt  paper_results.rst  robots.txt  whats_new.rst
examples/advanced_examples/: plot_cross_dataset.py  plot_hinss2021_classification.py  plot_mne_and_scikit_estimators.py  plot_pre_processing_steps.py  plot_pseudoonline.py  plot_riemannian_artifact_rejection.py  plot_select_electrodes_resample.py  plot_sliding_estimator.py  plot_statistical_analysis.py  plot_use_an_X_y_dataset.py  powermetrics_log.txt  riemannian_artifact_rejection.py
examples/data_management_and_configuration/: plot_bids_conversion.py  plot_disk_cache.py
examples/how_to_benchmark/: noplot_example_codecarbon.py  plot_benchmark.py  plot_benchmark_grid_search.py  plot_within_session_splitter.py  powermetrics_log.txt
examples/learning_curve/: noplot_learning_curve_p300_external.py  plot_learning_curve_motor_imagery.py
examples/paradigm_examples/: plot_cross_session_motor_imagery.py  plot_cross_subject_ssvep.py  plot_within_session_p300.py
examples/tutorials/: tutorial_5_combining_datasets.py
moabb/: __init__.py  benchmark.py  utils.py
moabb/analysis/: __init__.py  _utils.py  chance_level.py  meta_analysis.py  neural_signatures.py  plotting.py  results.py  style.py  timeline.py
moabb/datasets/: Lee2019.py  Weibo2014.py  Zhou2016.py  __init__.py  _channel_pick.py  aguilera_rodriguez2025.py  alex_mi.py  alphawaves.py  base.py  bbci_eeg_fnirs.py  bcicomp2020_imagined_speech.py  bcicomp2020_upper_limb.py  bcicomp2020_walking_erp.py  beetl.py  bids_interface.py  braininvaders.py  brandl2020.py  bson_loader.py  castillos2023.py  chailloux2020.py  chang2025.py  download.py  dreyer2023.py  epfl.py  erpcore2021.py  fake.py  forenzo2023.py  forenzo2024.py  gao2026.py  gigadb.py  guttmann_flury2025.py  hefmi_ich2025.py  hinss2021.py  huebner_llp.py  jeong2020.py  kaneshiro2015.py  kaya2018.py  kojima2024a.py  kojima2024b.py  kumar2024.py  (+56 more)
moabb/evaluations/: __init__.py  base.py  evaluations.py  splitters.py  utils.py
moabb/paradigms/: __init__.py  base.py  fixed_interval_windows.py  motor_imagery.py  p300.py  ssvep.py
moabb/pipelines/: __init__.py  classification.py  csp.py  features.py  utils.py
moabb/tests/: conftest.py  doi_cache.json  test_analysis.py  test_benchmark.py  test_bids_enrichment.py  test_chance_level.py  test_classification.py  test_compilation.py  test_dataset_fixes.py  test_dataset_timeline_ext.py  test_datasets.py  test_doi_validation.py  test_download.py  test_emissions.py  test_evaluations.py  test_evaluations_realdata.py  test_martinezcagigal_verbosity.py  test_metadata.py  test_metadata_cache.py  test_neural_signatures.py  test_paradigms.py  test_plotting.py  test_preprocessing.py  test_splits.py  test_timeline.py  test_zhou2016.py  util_tests.py
pipelines/: SSCOR-SSVEP.yml  TDCA-SSVEP.yml  TRCA_R-SSVEP.yml  eCCA-SSVEP.yml  itCCA-SSVEP.yml
scripts/: convert_to_nemar_bids.py  data_visualization_p300.py  generate_dataset_viz.py  generate_macro_table.py  generate_neural_signatures.py  generate_summary_tables.py  validate_summary_tables.py
scripts/paperswithcode/: create_datasets_and_tasks.py  upload_results.py
(+173 files in other folders)
